fix: update background gradient for collegamentoedit component for improved visibility

--- a/css/style-light.css
+++ b/css/style-light.css
@@ -359,7 +359,7 @@ select:focus {
 
 .collegamentoedit {
     backdrop-filter: blur(15px);
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+    background: linear-gradient(135deg, rgb(255, 255, 255), rgba(255, 255, 255, 0.87));
     box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.5);
     padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.5);
